Add login and signup

--- a/blog/templates/create_post.html
+++ b/blog/templates/create_post.html
@@ -4,12 +4,17 @@
 	<title></title>
 </head>
 <body>
-<form action="/create/{{all_posts.id}}" method="post">
+
+{% if msg %}
+{{msg}}
+{% endif %}
+<form action="/create/{{all_posts.id}}" method="post" enctype="multipart/form-data">
 	{% csrf_token %}
 	<label>Title</label><br>
 	<input type="text" name="title"><br><br>
 	<label>Body</label><br>
 	<textarea name = "body"  rows = "8" cols = "80"></textarea><br>
+	<input type="file" name="mycover">
 	<input type="submit" value="Create"> <br><br>
 
 
