--- a/blog/templates/page.html
+++ b/blog/templates/page.html
@@ -8,5 +8,6 @@
 <h1>{{post.title}}</h1>
 <b><p>Posted {{post.timestamp|timesince}} ago</p></b>
 <p><b>{{post.body|linebreaksbr}}</p></b>
+<img src="{{ post.cover.url }}">
 </body>
 </html>
