--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
 	<head>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
@@ -6,17 +7,24 @@
 	</head>
 	<body>
 		<h1>Welcome to my blog!<h1>
-		<a href="/create/">Create New Post</a>
+			{% if user.is_authenticated %}
+		<a class="btn btn-md btn-primary" href="/create/">Create New Post</a>
+		<a class="btn btn-md btn-default" href="/logout/">Logout</a>
+		{% else %}
+		<a class="btn btn-md btn-success" href="/login/">Login</a>
+		<a class="btn btn-md btn-warning" href="/signup/">Signup</a>
+		{% endif %}
+		
 		<br><br>
 		{% for Post in all_posts %}
 			<div class="card" style="width: 18rem;">
 				<div class="card-body">
+					<img src="{{Post.cover.url}}" style = "width:16rem; margin-right: 5px; margin-left: 5px;">
 					<h2 class="card-title">{{Post.title}}</h2>
 					
 					<h6>Posted: {{Post.timestamp|timesince}} ago</h6>
 					
 					<a href="/post/{{Post.id}}/" class="card-link">Read More</a>
-					
 				</div>
 			</div>
 			<hr>
